--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   :root {
     --background: 88 56% 96%;
     --foreground: 240 10% 3.9%;
-    --card: 120 39% 49% / 0.05;
+    --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
     --popover: 88 56% 100%;
     --popover-foreground: 240 10% 3.9%;
@@ -21,7 +21,7 @@
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 60 9.1% 97.8%;
-    --border: 120 39% 49% / 0.2;
+    --border: 120 10% 88%;
     --input: 120 10% 88%;
     --ring: 120 39% 49%;
     --chart-1: 12 76% 61%;
@@ -42,7 +42,7 @@
   .dark {
     --background: 120 10% 10%;
     --foreground: 60 9.1% 97.8%;
-    --card: 120 39% 49% / 0.1;
+    --card: 120 10% 12%;
     --card-foreground: 60 9.1% 97.8%;
     --popover: 120 10% 10%;
     --popover-foreground: 60 9.1% 97.8%;
@@ -56,7 +56,7 @@
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 60 9.1% 97.8%;
-    --border: 120 39% 49% / 0.3;
+    --border: 120 5% 25%;
     --input: 120 5% 25%;
     --ring: 120 39% 49%;
     --chart-1: 220 70% 50%;
